force-app/main/default/objects/LeadConvertMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>mapping of lead and corresponding opportunity fields</description>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Field__c</fullName>
        <label>Lead Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Field__c</fullName>
        <label>Opportunity Field</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Num__c</fullName>
        <label>Opportunity #</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Static_Value__c</fullName>
        <label>Static Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Lead Conversion Mapping</label>
    <listViews>
        <fullName>All_Mappings</fullName>
        <columns>Opportunity_Num__c</columns>
        <columns>NAME</columns>
        <columns>Lead_Field__c</columns>
        <columns>Opportunity_Field__c</columns>
        <columns>Static_Value__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mappings</label>
    </listViews>
</CustomObject>